--- a/addons/web/static/src/css/base.css
+++ b/addons/web/static/src/css/base.css
@@ -1071,7 +1071,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  overflow: auto;
+  overflow: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 .openerp .oe_application .oe_breadcrumb_item:not(:last-child) {
   max-width: 7em;
